@@ -1,3 +1,10 @@
+2004-05-07  Reinhard Max  <max@suse.de>
+
+	* generic/tclEncoding.c: 
+	* tests/encoding.test: added support and tests for translating
+	embedded null characters between real nullbytes and the internal
+	representation on input/output (Bug #949905).
+	
 2004-05-07  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* generic/tclFileName.c: 
